--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "coin-format": "^0.0.2",
     "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.2",
@@ -35,6 +36,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.7.0",
@@ -44,20 +46,19 @@
     "@graphql-codegen/typescript": "^4.1.1",
     "@graphql-codegen/typescript-operations": "^4.3.1",
     "@graphql-codegen/typescript-react-apollo": "^4.3.2",
+    "@rollup/plugin-inject": "^5.0.5",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@rollup/plugin-inject": "^5.0.5",
     "buffer": "^6.0.3",
     "eslint": "9.x",
-    "eslint-plugin-node": "^11.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-immutable": "^1.0.0",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
